@@ -80,13 +80,12 @@
 	[super dealloc];
 }
 
--(id) addChild:(CCNode*)child z:(int)z tag:(int)tag
+-(void) addChild:(CCNode*)child z:(int)z tag:(int)tag
 {
 	NSAssert(NO,@"ParallaxNode: use addChild:z:parallaxRatio:positionOffset instead");
-	return nil;
 }
 
--(id) addChild: (CCNode*) child z:(int)z parallaxRatio:(CGPoint)ratio positionOffset:(CGPoint)offset
+-(void) addChild: (CCNode*) child z:(int)z parallaxRatio:(CGPoint)ratio positionOffset:(CGPoint)offset
 {
 	NSAssert( child != nil, @"Argument must be non-nil");
 	CGPointObject *obj = [CGPointObject pointWithCGPoint:ratio offset:offset];
@@ -98,7 +97,7 @@
 	float y = pos.y * ratio.y + offset.y;
 	child.position = ccp(x,y);
 	
-	return [super addChild: child z:z tag:child.tag];
+	[super addChild: child z:z tag:child.tag];
 }
 
 -(void) removeChild:(CCNode*)node cleanup:(BOOL)cleanup
