@@ -1,6 +1,7 @@
 cocos2d for iPhone: http://www.cocos2d-iphone.org
 
-Copyright (c) 2008-2010 - (see each file to see the different copyright owners)
+Copyright (c) 2008-2010 - Ricardo Quesada and contributors
+(see each file to see the different copyright owners)
 
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
